# FastAPIEventNotify

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  struct.md
migrations/: env.py
migrations/versions/: b5cf8f2b08c2_initial_migration.py
src/: __init__.py  main.py
src/core/: config.py  context.py  logger_setup.py
src/database/: crud.py  session.py
src/dependencies/: __init__.py  database.py  http_client.py
src/models/: base.py  chats.py
src/schemas/: endpoint_schema.py  kudado_schema.py  kudago_schema.py  tg_schema.py
src/services/: __init__.py  api_kudago.py  api_telegram.py  event_notifier.py  scheduler.py
src/utils/: debug_logs.py  get_chat_id.py
