[project]
name = "fastapieventnotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.128.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
]
